# tutor-backend

./: Cargo.toml  go.mod  notes.txt
cmd/api/: main.go
config/: config.rs
internal/db/: db.go
internal/modules/tutor_profile_management/: handler.go  service.go
internal/modules/user_management/: user_handler.go  user_model.go  user_repository.go  user_service.go
src/: lib.rs
src/db/: mod.rs
src/modules/: mod.rs
src/modules/profile_management/: handler.rs  mod.rs  model.rs  repository.rs  routes_config.rs  service.rs
src/modules/profile_management/tutor/: handler.rs  mod.rs  model.rs  repository.rs  service.rs
src/modules/profile_management/user/: handler.rs  model.rs  repository.rs  service.rs
src/server/: mod.rs
