[package]
name = "tutor_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "bigdecimal"] }
tokio = { version = "1", features = ["full"] }
toml = "0.7"
dotenv = "0.15"
time = "0.3"
async-trait = "0.1.88"
bigdecimal = "0.3"

[lib]
name = "tutor_backend"
path = "src/lib.rs"
